# virgin-jelly

./: BEE_AGENT_ARCHITECTURE.md  README.md  ROYAL_JELLY_PROTOCOL.md  ROYAL_JELLY_THESIS.md  SIGNAL_MINING_NETWORK.md  pyproject.toml
docs/: PROOF_OF_SIGNAL.md
src/royal_jelly/: __init__.py  protocol.py
src/royal_jelly/agents/: __init__.py  base_bee.py  bee_cre_edgar.py
src/royal_jelly/models/: __init__.py  cell.py  provenance.py  score.py  signal.py  tier.py
src/royal_jelly/provenance/: __init__.py  hedera.py  merkle.py
src/royal_jelly/scoring/: __init__.py  adversarial.py  gates.py  jelly_score.py
tests/: test_adversarial.py  test_bee_cre.py  test_jelly_score.py  test_models.py
