[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "royal-jelly"
version = "0.1.0"
description = "Royal Jelly Protocol — intelligence grading, provenance, and verification for AI training data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Swarm & Bee", email = "build@swarmandbee.com" },
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
hedera = ["hiero-sdk-python>=0.1"]
test = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/royal_jelly"]
